# cdfy_career_poker_plugin

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: card.rs  deck.rs  effect.rs  game.rs  game_view.rs  lib.rs  mock.rs  plugin.rs  state.rs
src/events/: answer.rs  distribute.rs  effect_card.rs  mod.rs  pass.rs  select.rs  serve.rs
src/templates/: app.html
