[package]
name = "cdfy_career_poker_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.148"
serde_json = "1.0.89"
tera = { version = "1", default-features = false }
anyhow = { version = "1.0", default-features = false }
extism-pdk = "1.0.0"
rand = "0.8.5"

[lib]
crate-type = ["cdylib"]
